# dock-digits

./: .prettierignore  CHANGELOG.md  README.md  commitlint.config.js  package.json  release-please-config.json
.github/workflows/: build-release.yml  ci.yml  release-please.yml  release.yml  test-pat.yml
src/: App.css  App.tsx  AutoUpdater.tsx  DockIcon.tsx  DockSync.tsx  LaunchAtLogin.tsx  Settings.tsx  ShortcutConfig.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_entry.rs  app_launcher.rs  dock_reader.rs  icon_service.rs  login.rs  main.rs  shortcuts.rs  tray_menu.rs
src-tauri/src/models/: dock_app.rs  mod.rs
src-tauri/src/state/: app_state.rs  config.rs
src/components/: Toggle.tsx
src/types/: appEntry.ts  launchResult.ts
